provider/examples/resources/sec/vpc/public_subnet_2.tf
resource "aws_subnet" "public_subnet_2" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.public_subnet_2_cidr
  availability_zone = data.aws_availability_zones.all.names[1]

  tags = {
    Name : "${var.resource_prefix}-public-subnet-2"
  }
}

resource "aws_route_table_association" "public_subnet_2_route_table_association" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_route_table.id
}
